# Common

./: CMakeLists.txt  CMakePresets.json  README.md  immortals-common-config.cmake.in  pch.h  services.cpp  services.h  vcpkg-configuration.json  vcpkg.json
config/: common.h  config.h  file.cpp  network.h  soccer.h
debugging/: color.h  hub.h  source_location.h
logging/: logging.cpp
math/: angle.h  vec2.h  vec3.h
math/geom/: line_segment.h  rect.h
source/: pch.h  services.h
source/config/: common.h  config.h  network.h  soccer.h  vision.h
source/debugging/: color.h  hub.h  thread_name.h  wrapper.h
source/logging/: logging.cpp  macros.h
source/math/: helpers.h  vec2.h  vec3.h
source/math/geom/: circle.h  line.cpp  rect.h  robot.h
source/state/: field.h  referee.h  world.h
source/state/field/: field.h
source/state/raw/: ball.h  robot.h  world.h
source/state/referee/: command.h  match.h  state.h  team_info.h
source/state/soccer/: robot.h  state.h
source/storage/: storage.cpp  storage.h
state/: referee.h
storage/: storage.cpp
